# roboat

./: .gitignore  .gitmodules  CMakeLists.txt  Compute.md  Core PCB.md  Navigation.md  Pilot.md  PowerSystem.md  README.md  SolarArrayTrade.md  conanfile.txt
hw/Roboat/: RoboatCore.brd  RoboatCore.sch  eagle.epf
src/: CMakeLists.txt
src/arduino/Pilot/: Pilot.ino
src/arduino/libraries/Roboat_AHRS/: RoboatAHRS.cpp  RoboatAHRS.h  keywords.txt
src/arduino/libraries/Roboat_Captain/: RoboatCaptain.cpp  keywords.txt
src/arduino/libraries/Roboat_GPSManager/: RoboatGPSManager.cpp  RoboatGPSManager.h  keywords.txt
src/arduino/libraries/Roboat_Helm/: RoboatHelm.h
src/arduino/libraries/Roboat_LogManager/: RoboatLogManager.cpp  RoboatLogManager.h  keywords.txt
src/arduino/libraries/Roboat_PowerManager/: RoboatPowerManager.cpp  RoboatPowerManager.h
src/arduino/libraries/Roboat_StateMachine/: RoboatStateMachine.h
src/build-tools/micropython-builder/: Dockerfile  README.md  entrypoint.sh
src/micro/: ina260.py  install.sh  main.py  notes.md  pi_link.py  roboat_fsm.py  roboat_fsm_test.py  victron.py
src/micro/lib/micropython_collections.defaultdict-0.3.dist-info/: METADATA  RECORD
src/micro/lib/micropython_collections.deque-0.1.3.dist-info/: METADATA  RECORD
src/pi/: overview.json
src/pi/TIG/: docker-compose.yml  setup.md  telegraf.conf
src/pi/monitor/: main.py  requirements.txt
src/rpi/: CMakeLists.txt  HelmConnection.cc  HelmConnection.hpp  SQLite3Helpers.cc  SQLite3Helpers.hpp  main.cc
take1/: Captain.md
take1/hw/Roboat/: RoboatCore.pro
(+18 files in other folders)
